# arc

./: .dockerignore  404.html  README.md  index.html  robots.txt  sitemap.xml
.github/workflows/: gh-pages.yml  release.yml  test.yml
arc-docs/: Makefile  book.toml
arc-docs/arc-preprocessor/: Cargo.toml
arc-docs/src/: SUMMARY.md
arc-lang/: arc_lang.opam  dune-project
arc-lang/editor/vim/syntax/: arc.vim
arc-lang/examples/: arrays.arc  binopref.arc  blocks.arc  closure.arc  deduplication.arc  enum-patterns.arc  enums.arc  fib-imperative.arc  fraud-detection.arc  generic-enum.arc  generic-function.arc  interpolate.arc  interpreter.arc  lvalues.arc  monoid.arc  never.arc  open-records.arc  placeholder.arc  query.arc  records.arc  row-polymorphism-shape.arc  row-polymorphism.arc  shapes.arc  strings.arc  timers.arc  tuples.arc  type-alias.arc  types.arc  values.arc  wordcount.arc
arc-lang/lib/: dune
arc-lang/src/: ast.ml  ast_to_ir1.ml  declare.ml  dune  error.ml  eval.ml  graph.ml  infer_ir1.ml  ir1.ml  ir1_to_ir2.ml  ir2.ml  ir2_to_ir3.ml  ir3.ml  ir3_to_mlir.ml  lexer.mll  main.ml  mlir.ml  parser.mly  parser_utils.mly  pretty.ml  pretty_ast.ml  pretty_ir1.ml  pretty_ir2.ml  pretty_ir3.ml  pretty_mlir.ml  token.ml  tokens.mly
arc-lang/stdlib/: std.arc
arc-lang/test/: dune
arc-mlir/src/: CMakeLists.txt
authors/: index.html
authors/segeljakt/: index.html
blog/: index.html
blog/1-introduction/: index.html
docker/: Dockerfile.coordinator  Dockerfile.worker  docker-compose.yaml
docs/: 404.html  bibliography.html  command-line-interface.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/arc-lang/: Annots.html  Assign.html  Block.html  Def.html  Enum.html  Expr.html  ExternDef.html  ExternType.html  Generics.html  Global.html  Instance.html  Item.html  Module.html  Name.html  Params.html  Path.html  (+10 more)
experimental/arc-lang/crates/ast-to-ir1/: Cargo.toml
experimental/arc-lang/crates/ast-to-ir1/src/: context.rs  lib.rs  lower.rs
experimental/arc-lang/crates/compiler/: Cargo.toml
experimental/arc-lang/crates/compiler/examples/: basic.arc
experimental/arc-lang/crates/compiler/src/: main.rs
experimental/arc-lang/crates/parser/: Cargo.toml
experimental/arc-lang/crates/parser/src/: error.rs  grammar.lalrpop  lib.rs
experimental/arc-lang/repl/: Cargo.toml
privacy-policy/: index.html
(+68 files in other folders)
