[package]
name = "arc-lang-repl"
version = "0.0.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
license = "MIT"

[lib]
name = "arc_lang_repl"
path = "src/lib.rs"

[dependencies]
arc-lang-compiler = { version = "=0.0.0", path = "../compiler" }

rustyline           = { version = "7.1.0" }
anyhow              = { version = "1.0.37" }
