[package]
name = "ast-to-ir1"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
ir1 = { path = "../ir1" }
declare = { path = "../declare" }
utils = { path = "../utils" }
info = { path = "../info" }
im-rc = "15.1.0"
